first version maybe work not tested

--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -5,3 +5,4 @@ authors: ['sub-kek']
 api-version: 1.16
 load: POSTWORLD
 description: 'The simple skin system plugin uses ElyBy. Written by subkek.'
+website: 'https://github.com/sub-kek'
